test/CheckError/Cast/ConstRefMemberVarImplicitCopy.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// Fails since const(int&) copies to int&, whereas it should copy to const(int)&.
// XFAIL: *

class TestClass(int& member) {
	int& getRefNonConst() {
		return @member;
	}
	
	int& getRefConst() const {
		// Error: member is const here.
		// CHECK: .loci:15:3: error: Can't implicitly cast value of type 'const(int_t&)&' to type 'int_t&'.
		return @member;
	}
}

// CHECK: 1 error generated.
